<resources>
    <string name="app_name">UTS-IF6K-10116599-ROBBY EKA</string>
    
    <string name="silahkan_mengisi">Ayah Bunda silahkan mengisi data anak di bawah ini</string>
    <string name="nama_panggilan">Nama Panggilan Anak</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="umur">Umur Saat Ini</string>
    <string name="isi_nama">Isi dengan nama anak anda</string>
    <string name="contoh">cth : 12</string>
    <string name="umur_diperlukan">*Umur diperlukan untuk rekomendasi waktu penggunaan handphone anak Anda</string>
    <string name="daftar">Daftar</string>

    <string name="selamat">Yeay, Selamat :)</string>
    <string name="code">AVGR99</string>
    <string name="bingung">Bingung saat membuat kesepakatan instalasi dengan anak?</string>
    <string name="tutorial">Lihat Tutorial</string>


</resources>
